--- a/2026/app/requirements.txt
+++ b/2026/app/requirements.txt
@@ -1,145 +1,142 @@
-Package                    Version
--------------------------- -----------
-altair                     5.4.1
-annotated-types            0.7.0
-appdirs                    1.4.4
-asttokens                  2.4.1
-attrs                      24.2.0
-bcrypt                     4.2.0
-blinker                    1.8.2
-Brotli                     1.1.0
-cachetools                 5.5.0
-captcha                    0.6.0
-catboost                   1.2.7
-certifi                    2024.8.30
-cffi                       1.17.1
-charset-normalizer         3.4.0
-click                      8.1.7
-comm                       0.2.2
-contourpy                  1.3.0
-cssselect2                 0.7.0
-cycler                     0.12.1
-debugpy                    1.8.7
-decorator                  5.1.1
-executing                  2.1.0
-extra-streamlit-components 0.1.71
-fonttools                  4.54.1
-fpdf                       1.7.2
-gitdb                      4.0.11
-GitPython                  3.1.43
-graphviz                   0.20.3
-h11                        0.14.0
-htmlmin                    0.1.12
-idna                       3.10
-ImageHash                  4.3.1
-imbalanced-learn           0.13.0
-imblearn                   0.0
-importlib_metadata         8.5.0
-ipykernel                  6.29.5
-ipython                    8.29.0
-jedi                       0.19.1
-Jinja2                     3.1.4
-joblib                     1.4.2
-jsonschema                 4.23.0
-jsonschema-specifications  2024.10.1
-jupyter_client             8.6.3
-jupyter_core               5.7.2
-kaleido                    0.2.1
-kiwisolver                 1.4.7
-markdown-it-py             3.0.0
-MarkupSafe                 2.1.5
-matplotlib                 3.9.2
-matplotlib-inline          0.1.7
-mdurl                      0.1.2
-missingno                  0.5.2
-mlxtend                    0.23.4
-multimethod                1.12
-narwhals                   1.11.1
-nest-asyncio               1.6.0
-networkx                   3.4.2
-numpy                      1.26.4
-nvidia-nccl-cu12           2.25.1
-outcome                    1.3.0.post0
-packaging                  24.1
-pandas                     2.2.3
-pandas-profiling           3.2.0
-parso                      0.8.4
-patsy                      1.0.1
-pdfkit                     1.0.0
-pexpect                    4.9.0
-phik                       0.12.4
-pillow                     10.4.0
-pip                        24.3.1
-platformdirs               4.3.6
-plotly                     5.24.1
-prompt_toolkit             3.0.48
-protobuf                   5.28.3
-psutil                     6.1.0
-ptyprocess                 0.7.0
-pure_eval                  0.2.3
-pyarrow                    18.0.0
-pycparser                  2.22
-pydantic                   2.9.2
-pydantic_core              2.23.4
-pydantic-settings          2.6.0
-pydeck                     0.9.1
-pydyf                      0.11.0
-pyee                       11.1.1
-Pygments                   2.18.0
-PyJWT                      2.9.0
-pyparsing                  3.2.0
-PyPDF2                     3.0.1
-pyphen                     0.15.0
-pyppeteer                  2.0.0
-PySocks                    1.7.1
-python-dateutil            2.9.0.post0
-python-dotenv              1.0.1
-pytz                       2024.2
-PyWavelets                 1.7.0
-PyYAML                     6.0.2
-pyzmq                      26.2.0
-referencing                0.35.1
-requests                   2.32.3
-rich                       13.9.3
-rpds-py                    0.20.0
-scikit-learn               1.5.2
-scipy                      1.14.1
-seaborn                    0.13.2
-selenium                   4.5.0
-selenium-print             1.0.2
-six                        1.16.0
-sklearn-compat             0.1.3
-smmap                      5.0.1
-sniffio                    1.3.1
-sortedcontainers           2.4.0
-stack-data                 0.6.3
-statsmodels                0.14.4
-streamlit                  1.39.0
-streamlit-authenticator    0.1.5
-tangled-up-in-unicode      0.2.0
-tenacity                   9.0.0
-threadpoolctl              3.5.0
-tinycss2                   1.4.0
-tinyhtml5                  2.0.0
-toml                       0.10.2
-tornado                    6.4.1
-tqdm                       4.66.6
-traitlets                  5.14.3
-trio                       0.27.0
-trio-websocket             0.11.1
-typing_extensions          4.12.2
-tzdata                     2024.2
-unzip                      1.0.0
-urllib3                    1.26.20
-visions                    0.7.4
-watchdog                   5.0.3
-wcwidth                    0.2.13
-weasyprint                 63.0
-webdriver-manager          4.0.2
-webencodings               0.5.1
-websocket-client           1.8.0
-websockets                 10.4
-wsproto                    1.2.0
-xgboost                    2.1.4
-zipp                       3.21.0
-zopfli                     0.2.3.post1
+altair==5.4.1
+annotated-types==0.7.0
+appdirs==1.4.4
+asttokens==2.4.1
+attrs==24.2.0
+bcrypt==4.2.0
+blinker==1.8.2
+Brotli==1.1.0
+cachetools==5.5.0
+captcha==0.6.0
+catboost==1.2.7
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+comm==0.2.2
+contourpy==1.3.0
+cssselect2==0.7.0
+cycler==0.12.1
+debugpy==1.8.7
+decorator==5.1.1
+executing==2.1.0
+extra-streamlit-components==0.1.71
+fonttools==4.54.1
+fpdf==1.7.2
+gitdb==4.0.11
+GitPython==3.1.43
+graphviz==0.20.3
+h11==0.14.0
+htmlmin==0.1.12
+idna==3.10
+ImageHash==4.3.1
+imbalanced-learn==0.13.0
+imblearn==0.0
+importlib_metadata==8.5.0
+ipykernel==6.29.5
+ipython==8.29.0
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kaleido==0.2.1
+kiwisolver==1.4.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+missingno==0.5.2
+mlxtend==0.23.4
+multimethod==1.12
+narwhals==1.11.1
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==1.26.4
+nvidia-nccl-cu12==2.25.1
+outcome==1.3.0.post0
+packaging==24.1
+pandas==2.2.3
+pandas-profiling==3.2.0
+parso==0.8.4
+patsy==1.0.1
+pdfkit==1.0.0
+pexpect==4.9.0
+phik==0.12.4
+pillow==10.4.0
+platformdirs==4.3.6
+plotly==5.24.1
+prompt_toolkit==3.0.48
+protobuf==5.28.3
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==18.0.0
+pycparser==2.22
+pydantic==2.9.2
+pydantic-settings==2.6.0
+pydantic_core==2.23.4
+pydeck==0.9.1
+pydyf==0.11.0
+pyee==11.1.1
+Pygments==2.18.0
+PyJWT==2.9.0
+pyparsing==3.2.0
+PyPDF2==3.0.1
+pyphen==0.15.0
+pyppeteer==2.0.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+PyWavelets==1.7.0
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.3
+rpds-py==0.20.0
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+selenium==4.5.0
+selenium-print==1.0.2
+six==1.16.0
+sklearn-compat==0.1.3
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+stack-data==0.6.3
+statsmodels==0.14.4
+streamlit==1.39.0
+streamlit-authenticator==0.1.5
+tangled-up-in-unicode==0.2.0
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+toml==0.10.2
+tornado==6.4.1
+tqdm==4.66.6
+traitlets==5.14.3
+trio==0.27.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
+tzdata==2024.2
+unzip==1.0.0
+urllib3==1.26.20
+visions==0.7.4
+watchdog==5.0.3
+wcwidth==0.2.13
+weasyprint==63.0
+webdriver-manager==4.0.2
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==10.4
+wsproto==1.2.0
+xgboost==2.1.4
+zipp==3.21.0
+zopfli==0.2.3.post1
